modified the images

--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Spaghetti Carbonara</h1>
-    <img src="/api/placeholder/400/300" alt="Creamy spaghetti carbonara">
+    <img src="/images/Spaghetti-carbonara.jpg" alt="Creamy spaghetti carbonara">
 
     <h2>Description</h2>
     <p>A classic Roman pasta dish made with eggs, cheese, pancetta, and black pepper. This simple yet elegant dish comes together quickly and always impresses with its rich, creamy sauce.</p>
