--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Tiramisu</h1>
-    <img src="/api/placeholder/400/300" alt="Classic Italian tiramisu">
+    <img src="/images/Tiramisu.jpg" alt="Classic Italian tiramisu">
 
     <h2>Description</h2>
     <p>A classic Italian dessert made with layers of coffee-soaked ladyfingers and a rich mascarpone cream. This no-bake dessert is perfect for special occasions and can be made ahead of time.</p>
