--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Classic Lasagna</h1>
-    <img src="/images/delicious-lasagna-slice-stockcake.webp" alt="Delicious lasagna with melted cheese">
+    <img src="../images/delicious-lasagna-slice-stockcake.webp" alt="Delicious lasagna with melted cheese">
 
     <h2>Description</h2>
     <p>A rich and creamy homemade lasagna, layered with tender pasta, savory meat sauce, and three types of cheese. This classic Italian dish is perfect for family dinners and special occasions.</p>
